Stage 3 complete: all HTML pages updated + site ready to grow

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
         <nav>
             <h1 class="logo">Lexy Unleashed</h1>
             <u1 class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">The Blog</a></li>
-                <li><a href="#">GOWL</a></li>
-                <li><a href="#">Podcasst</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">The Blog</a></li>
+                <li><a href="gowl.html">GOWL</a></li>
+                <li><a href="podcast.html">Podcast</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </u1>
         </nav>
         <div class="hero">
-            <h2>Chaos. Confidence. No Filter and No Permission Needed.</h2>
+            <h2>Chaos. Confidence. No Filter. No Permission.</h2>
             <p>Welcome to the Empire</p>
         </div>
     </header>
 </body>
 </html>
+
