corrected errors in coding

--- a/podcast.html
+++ b/podcast.html
@@ -2,21 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial scale=1.0">
+        <meta name="viewport" content=""width=device-width, initial scale=1.0">
         <title>Podcast | Lexy Unleashed</title>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <header>
-            <h1> class="logo">Lexy Unleashed</h1>
             <nav>
-                <ul> class="nav-links">
+                <h1 class="logo">Lexy Unleashed</h1>
+                <u1 class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">The Blog</a></li>
                     <li><a href="gowl.html">GOWL</a></li>
                     <li><a href="podcast.html">Podcast</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                </ul>
+                </u1>
             </nav>
         </header>
 
