Stage 5 complete: Intro section added and styled

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                 <li><a href="shop.html">Shop</a></li>
             </u1>
         </nav>
-        <div class="hero">
-            <h2>Chaos. Confidence. No Filter. No Permission.</h2>
-            <p>Welcome to the Empire</p>
-        </div>
     </header>
+
+    <main>
+        <section class="intro">
+            <h2>Chaos. Confidence. No Filter. No Permission.</h2>
+            <p>Wlcome to the Empire</p>
+        </section>
+    </main>
 </body>
 </html>
 
