--- a/gowl.html
+++ b/gowl.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content=""width=device-width, initial scale=1.0">
         <title>GOWL | Lexy Unleashed</title>
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="icon" type="imag/png" href="favicon.png" />
     </head>
     <body>
         <header>
