Added and styled cta button for shop

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <main>
         <section class="intro">
             <h2>Chaos. Confidence. No Filter. No Permission.</h2>
-            <p>Wlcome to the Empire</p>
+            <p>Welcome to the Empire</p>
+            <a href="shop.html" class="cta-button">Enter the Shop</a>
         </section>
     </main>
     <div class="sparkle"></div>
