--- a/blog-posts/the-door-the-nerve-the-rib.html
+++ b/blog-posts/the-door-the-nerve-the-rib.html
@@ -25,60 +25,93 @@
                 <p class="date">June 6, 2025</p>
                 <p>I wasn't supposed to lose a rib. That wasn't on my to-do list</p>
                 <p>But chaos doesn't check calendars. And trauma doesn't ask for permission. It just kicks the damn door in.</p>
-                <p>In my case? It literally was the door.</p>
+                <p>In my case?<br>
+                It literally was the door.</p>
 
                 <p>Back in February, a broken door at work bounced back open as I was about to walk in, crushing my middle finger (between the top knuckle and fingertip) between the door handle and my phone. No warning. No mercy. Just full-force impact.</p>
 
                 <p>At first, I thought it was just pain. I've lived through worse. I've kept going through sprains, stress induced migraines that lead to temporary paralysis (quadiplegia style), hip dislocation, torn labrum, seizures, and shutdowns. I'm the girl that shows up limping, laughing, and still helping everyone else before herself.</p>
 
                 <p>But this was different.</p>
-                <p>The pain didn't fade.<br>Then one day in physical therapy, I was asked to raise my arm straigh in the air over my head, and everything changed. Pain shot from my finger all the way to my neck. Like lightening. My entire arm lit up with fire and tingling as if it was vibrating. Nonstop.</p>
+
+                <p>The pain didn't fade.<br>
+                Then one day in physical therapy, I was asked to raise my arm straigh in the air over my head, and everything changed. Pain shot from my finger all the way to my neck. Like lightening. My entire arm lit up with fire and tingling as if it was vibrating. Nonstop.</p>
 
                 <p>After that, I started coughing every time I spoke. I figured I was dehydrated and drank more water. The next night, breathing became difficult. I took Benadryl, just in case it was an allergic reaction.</p>
 
-                <p>Then Friday came.<br>I woke up to a blue hand, a swollen arm, and barely any breath left in my lungs.</p>
+                <p>Then Friday came.<br>
+                I woke up to a blue hand, a swollen arm, and barely any breath left in my lungs.</p>
 
                 <p>Urgent care sent me to the ER.</p>
 
                 <p>Turns out, the door did more than a "strain" and bruise me. It activated something much worse: Thoracic Oulet Syndrome. The impact had compressed my brachial plexus, a bundle of nerves that runs from the neck to the middle finger. It's called neurogenic TOS, and every movement pulled the nerves tighter, like a noose I never asked for.</p>
 
-                <p>Four months of doctors.<br>MRIs. CTs. An EMG. Referrals. Dismissals.<br>Being ignored. Gaslit. Poked. Prodded</p>
+                <p>Four months of doctors.<br>
+                MRIs. CTs. An EMG. Referrals. Dismissals.<br>
+                Being ignored. Gaslit. Poked. Prodded</p>
 
-                <p>I was told it was in my head.<br>I was told it was anxiety.<br> I was told to rest, ice, and wait it out. </p>
+                <p>I was told it was in my head.<br>
+                I was told it was anxiety.<br>
+                I was told to rest, ice, and wait it out. </p>
+
+                <p>Each appointment left me more frustrated than the last. They'd smile, nod, and hand me generic advice like rest more, breathe deeply, or take a warm bath. I wasn't looking for comfort-I was begging for someone to listen. To believe me. To look past the fact that I was still standing and see that I was barely holding it together.</p>
 
                 <p>Until finally, one orthopedic specialist took me seriously. He got me to the right surgeon, a cardiothoracic badass who ordered a scalene blocker (a lidocaine injection through my neck into my scalene mucles) to mimic decompression and test whether damages were permanen or if surgery would help.</p>
 
-                <p>It worked. Temporarily...until the numbing agent wore off.<br>Which meant one thing.</p>
+                <p>It worked. Temporarily...until the numbing agent wore off.<br>
+                Which meant one thing:</p>
 
                 <p>There was a permanent fix.</p>
 
-                <p>Robotic-assissted first rib resection and divison of the scaledne muscles.<br>Translation? They deflated my lung, removed my rib to make more room in my thoracic outlet, severing the connection of my anterior and posterior scalene muscles, reinflate my lung, and hoped the nerves would finally breathe again.</p>
+                <p>Robotic-assissted first rib resection and divison of the scaledne muscles.<br>
+                Translation? They deflated my lung, removed my rib to make more room in my thoracic outlet, severing the connection of my anterior and posterior scalene muscles, reinflate my lung, and hoped the nerves would finally breathe again.</p>
 
                 <p>On June 3rd, I let a team of strangers cut out a part of me.</p>
 
                 <p>I remember lying in pre-op. Grogu tucked under my arm, waiting to be cut open. I had been up all night the night before, scared, and preparing my place for when I go home. I even filled out paperwork to keep the rib. I get to pick it up two weeks after the surgery date. A souvenir that I survived.</p>
 
+                <p>I was making jokes in that hospital gown, to distract myself from what was about to happen. Trying not to focus on my fears, while clutching Grogu like a lifeline. It's weird what you hold onto when you're scared. My true thoughts were a carousel of what-ifs. What if something goes wrong? What if I wake up and nothing is better? What if I don't wake up at all? But underneath the fear, there was something else-relief. Relief that someone was finally doing something. That I wasn't being told to just tough it out again.</p>
+
                 <p>I woke up in a recovery bed, dazed, in pain, four incisions glued shut. My chest throbbed. Breathing hurt. The incision sites hurt. But for the first time in four months, my left arm, hand, and middle finger were quiet.</p>
 
-                <p>The tingling.<br>The numbness.<br>The fire.<br>Gone.</p>
+                <p>The tingling.<br>
+                The numbness.<br>
+                The fire.<br>
+                Gone.</p>
 
                 <p>It worked.</p>
 
-                <p>The kicker?<br>This wasn't even the injury I've been fighting to get fixed for over a year.<br>That's my right hip.<br>This was the bonus trauma. The unexpected detour.<br>And it still couldn't wait.</p>
+                <p>The kicker?<br>
+                This wasn't even the injury I've been fighting to get fixed for over a year.<br>
+                That's my right hip.<br>
+                This was the bonus trauma. The unexpected detour.<br>
+                And it still couldn't wait.</p>
 
                 <p>That's the kind of year it's been.</p>
 
                 <p>But here's what it didn't take:</p>
 
-                <p>It didn't take my voice.<br>It didn't take my fire.<br>And it damn sure didn't take my power.</p>
+                <p>It didn't take my voice.<br>
+                It didn't take my fire.<br>
+                And it damn sure didn't take my power.</p>
 
-                <p>Because this,<br>All of this.<br>This is exactly what Lexy Unleashed was built for.</p>
+                <p>Because this,<br>
+                All of this.<br>
+                This is exactly what Lexy Unleashed was built for.</p>
 
-                <p>I don't just survive chaos.<br>I weaponize it.</p>
+                <p>I don't just survive chaos.<br>
+                I weaponize it.</p>
 
-                <p>This blog isn't some filtered Pinterest dreamboard.<br>It's surgical glue and mascara.<br>It's grogu in the hospital bed as my emotional support since I couldn't bring my pups.<br>It's laughing through pain, and biting back when life bites first.</p>
+                <p>This blog isn't some filtered Pinterest dreamboard.<br>
+                It's surgical glue and mascara.<br>
+                It's grogu in the hospital bed as my emotional support since I couldn't bring my pups.<br>
+                It's laughing through pain, and biting back when life bites first.</p>
 
-                <p>So yeah, I lost a rib.<br>But what I gained?<br>Isn't so easily removed.</p>
+                <p>So yeah, I lost a rib.<br
+                >But what I gained?<br>
+                Isn't so easily removed.</p>
+
+                <p>I lost a piece of bone, sure, but I gained something bigger. A voice that won't be silenced. A story that refuses to be buried. And a reminder that I can survive things that were never supposed to happen and still come out louder, sharper, and more alive than ever.</p>
 
                 <p>And I'm just getting started.</p>
 
