--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content=""width=device-width, initial-scale="1.0" />
     <title>Home | Lexy Unleashed</title>
+    <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="imag/png" href="favicon.png" />
 </head> 
