updated about section and corrected typos

--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
                 <h1 class="logo">Lexy Unleashed</h1>
                 <u1 class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Lexy</a></li>
-                    <li><a href="blog.html">The Blog</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="gowl.html">GOWL</a></li>
                     <li><a href="podcast.html">Podcast</a></li>
                     <li><a href="shop.html">Shop</a></li>
@@ -24,23 +24,31 @@
         </header>
         <main class="main about-page">
             <section class="about-content">
-                <h1 class="glow-header">About Lexy</h1>
-                <p><strong>Lexy Unleashed</strong> isn't just a name-it's a whole damn movement. Built from chaos, sharpened by scars, and powered by unapologetic confidence, Lexy doesn't shrink to fit expectationsShe rewrites the rules.</p>
+                <h1 class="glow-header">About Lexy Unleashed</h1>
 
-                <hr class="divider" />
-
-                <h2>Who I Am</h2>
-                <p>I'm Lexy. Nerdy, neurospicy, and not here to be quiet. I've survived medical madness, personal losses, and system failures-and I turned every breakdown into a blueprint. I don't just rise... I reload.</p>
-
-                <hr class="divider" />
-
-                <h2>What this Site Is</h2>
-                <p>This is the digital HQ for chaos and confidence. A place where pain becomes power, and real talk reigns. Expect blogs that hit hard, merch that speaks louder, and a movement that never asks permission.</p>
+                <p><strong>Lexy Unleashed</strong> isn't just a brand. It's rebellion.<br>It's what happens when chaos meets confidence-and refuses to be silenced.<br>Built from scars, powered by truth, and unapologetically loud.<br>I don't shrink to fit expectations. I rewrite the rules.</p>
 
                 <hr class="divider" />
 
                 <h2>What This Site Is</h2>
-                <p>Press, brand collabs, interview, or chaos-fueled ideas? Hit the <a href="/contact.html" class="about-link">Contact</a> page and let's make something wild.</p>
+
+                <p>This is the digital HQ for all things bold.<br>A space where breakdowns become blueprints, pain becomes power, and no one asks permission to take up space.</p>
+
+                <p>Here, I share the raw, the ridiculous, and the real-from survivor grit to glam chaos.<br>Expect unfiltered blogs, sharp one-liners, merch with meaning, and a mindset that doesn't whisper.</p>
+
+                <hr class="divider" />
+
+                <h2>Who I Am (The Teaser)</h2>
+
+                <p>I'm Lexy. Nerdy, neurospicy, and uncomfortably honest.<br>I've been through hell with glitter on my face-and came out louder, smarter, and still swinging.</p>
+
+                <p><strong>Want the full story?</strong><br>👑 <a href="/blog-posts/uncaged-who-i-am" class="about-link">Read: Uncaged</a></p>
+
+                <hr class="divider" />
+
+                <h2>Let's Connect</h2>
+                
+                <p>Brand collabs, press inquiries, interviews, or chaos-fueled brilliance?<br>Hit the <a href="/contact.html" class="about-link">Contact</a> page and let's make something wild.</p>
             </section>
         </main>
     </body>
