--- a/blog-posts/the-door-the-nerve-the-rib.html
+++ b/blog-posts/the-door-the-nerve-the-rib.html
@@ -13,7 +13,8 @@
                 <h1 class="logo">Lexy Unleashed</h1>
                 <ul class="nav-links">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../blog.html">The Blog</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../blog.html">Blog</a></li>
                     <li><a href="../gowl.html">GOWL</a></li>
                     <li><a href="../podcast.html">Podcast</a></li>
                     <li><a href="../shop.html">Shop</a></li>
